index credit addition

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
+    <div id = 'text'>
+      <p>
+        Board template credit to IVIerg.
+      </p>
+    </div>
     <div id="boardDiv" />
     <script src="https://fb.me/react-15.0.1.min.js"></script>
     <script src="https://fb.me/react-dom-15.0.1.min.js"></script>
